fixes for new hosting